--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,16 @@
 <head>
   <title>Express</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <script src="javascripts/main.js"></script>
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+<header id="header"></header>
+<main>
+  <section id="main"></section>
+  <h2 onclick="addKeyword()">Keywords</h2>
+  <section id="keywords" class="container"> </section>
+</main>
 </body>
 
 </html>
