Exemplo de uma marcação de visitas a vários monumentos
Campos de nome e email
Campos para selecionar o monumento e hora da marcação
Botão de adicionar que:
- Acrescenta um objecto com monumento e hora à lista de marcações
- Mostra a lista de marcações no HTML
Botão de submeter que de momento ainda não faz nada (TODO)

--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,13 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
-  <script src="javascripts/main.js"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-<header id="header"></header>
-<main>
-  <section id="main"></section>
-  <h2 onclick="addKeyword()">Keywords</h2>
-  <section id="keywords" class="container"> </section>
-</main>
+    <p><a href="onclick.html"> Exemplo de onload e onclick com injeção de HTML</a></p>
+    <p><a href="form_array_obj.html"> Exemplo com forms, arrays, objectos e ciclos (for)</a></p>
 </body>
-
 </html>
