Exemplo de um mini-jogo
- Demonstração da utilização do setInterval, createElement, remove, etc

--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
 <body>
     <p><a href="onclick.html"> Exemplo de onload e onclick com injeção de HTML</a></p>
     <p><a href="form_array_obj.html"> Exemplo com forms, arrays, objectos e ciclos (for)</a></p>
+    <p><a href="js-5-4 interval/index.html"> Mini jogo para demonstrar o setInterval, createElement, remove, etc </a></p>
 </body>
 </html>
